--- a/WpfApp2/Log.xaml
+++ b/WpfApp2/Log.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfApp2.Journal"
+﻿<Window x:Class="WpfApp2.Log"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,8 +9,8 @@
     <Grid>
         <StackPanel>
             <Label Content="Фильтр"/>
-            <TextBox x:Name="filterTextBox" TextChanged="filterTextBox_TextChanged_1" />
-            <ListBox x:Name="groups" ItemsSource="{Binding Groups}" DisplayMemberPath="Name" IsSynchronizedWithCurrentItem="False"/>
+            <TextBox x:Name="filterTextBox" TextChanged="filterTextBox_TextChanged" />
+            <ListBox x:Name="groups" ItemsSource="{Binding Groups}" DisplayMemberPath="Name" SelectionChanged="groups_SelectionChanged"/>
         </StackPanel>
     </Grid>
 </Window>
